refactor(slip,desktop): #809 lineId 왕복 계약 도입 — 세트 계보 휴리스틱 전면 제거 (개발책임자 결정)
7라운드 연속 미수렴의 **근본원인 해소**. 개발책임자 결정(2026-07-16).
R7 리뷰 + 결정: https://github.com/ewoo14/Samhan-Public/pull/820#issuecomment-4985570977

## 왜
update 계약이 **라인 안정 ID 없이 전 라인을 통째 교체** → 서버가 "신규 라인"과 "수정된 기존
라인"을 구분 불가 → 버려진 세트 계보(setHead/parentSetModel)를 fingerprint 휴리스틱으로
되찾으려는 모든 시도가 반례에 붕괴:
- R5 greedy       → 라이브 CONFIRMED 오귀속(head 탈취 · 자기강화 루프)
- R6 2-패스 전역   → R7 이 BLOCKING + 반례 probe 로 붕괴
  · [BLOCKING] 세트 head 구성품(qty=2·80,000)의 **수량만 3으로 수정**해도 exact 불일치 →
    head 는 fallback 후보 제외(R6 설계) → 계보 없는 일반 라인 → 배분가 88,000 이 LINE_SAVE 로
    각인(spec §24 위배). R6 의 "보수적 소실 = 안전" 판단이 틀렸음 — 소실 = 각인.
  · [HIGH] 같은 productId 의 구성품(qty=1)+단품(qty=3)을 각각 2·4 로 동시 수정 → 거리 모두 1 →
    빈 계보 우선 때문에 첫 라인이 단품 엔트리 선점, 실제 단품은 거리 3인 세트 엔트리 승계 →
    서로 뒤바뀜. 요청 순서 바꾸면 결과 달라져 "순서 비의존" 주장도 붕괴.
- R7 판정: **"거리 정렬 그리디로는 해결할 수 없다"**
→ **계보를 애초에 버리지 않는다.**

## 계약
- 상세 응답 `id` → FE 수정 payload **`lineId`(nullable UUID) 왕복**
- `lineId != null` : **현재 문서의 활성 라인인지 검증** 후 계보 결정적 승계
- 타 문서 ID·중복 ID : **400 `INVALID_INPUT`** — 403 이 아닌 이유는 **문서 존재 여부 oracle
  노출 회피**
- `lineId == null` 또는 미전송 : **신규 평면 라인**. 🔑 **휴리스틱 fallback 없음** —
  폴백을 남기면 같은 결함이 재발하므로 의도적으로 제거
- UUID 는 **payload 전용**(D-R3-1 선례 — 화면 표시 금지)
※ 레포 실구조 정정: 별도 `SalesSlipUpdateRequest` 는 없고 매입·매출이 공용
  `SlipUpdateRequest.LineRequest` 사용

## BundleLineageResolver — 휴리스틱 전면 제거
fingerprint 매칭 · 거리 정렬 · tie-break · head exact 전용을 **전부 제거**하고
`Map<lineId, lineage>` **직접 조회**로 단순화. 136줄. (Comparator/distance/tie/
FallbackCandidate 잔존 0 — PM grep 확인)

## 견적 응답 DTO 갭 (R7-FE-1)
`EstimateLineResponse` 에 `setHead`/`parentSetModel` 이 없어 FE 가 계보를 알 수도 되돌려 줄
수도 없던 것(전표 `SlipLineResponse` 엔 있음 = 또 slip/estimate 비대칭) → 노출 추가.

## 회귀 테스트 — R7 반례를 그대로 잠금
BundleLineageResolverTest 7건 전면 재작성:
- modifiedSetHead_quantityOnly_stillPreservesLineageByLineId          ← BLOCKING 반례
- sameProductComponentAndPlainLine_keepTheirOwnLineageRegardlessOfRequestOrder ← HIGH 반례
- swappingRequestOrder_does